<resources>
    <string name="app_name">MedikamentenApp</string>
    <string name="logo">Logo_vergissmeinnicht</string>
   <!-- <string name="username">Username</string> -->
    <string name="password">Passwort</string>
    <string name="name">Name</string>
    <string name="login">Einloggen/Registrieren</string>
    <!-- <string name="enter_time">Uhrzeit eingeben</string> -->
    <string name="button_add_time">Uhrzeit hinzufügen</string>
    <!-- <string name="existing_times">Existierende Zeiten:</string> -->
   <!-- <string name="button_ready">Fertig</string> -->
    <string name="button_add_med">Medikament hinzufügen</string>
    <string name="button_med_finish">Fertig</string>
    <string name="enter_med">Medikament eingeben</string>
    <string name="enter_dose">Anzahl Pulver je Einnahme</string>
    <string name="willkomen">Herzlich willkommen zu:</string>
    <string name="title"><![CDATA[<h3>Liste der eingenommen Medikamente inkl Uhrzeit</h3>]]></string>
</resources>